# webcrane

./: .gitignore  LICENSE  README.md  config.ini  main.py  pyproject.toml
src/: __init__.py
src/client/: __init__.py  reverse_dict.py
src/server/: __init__.py
src/shared/: chunk_reader.py  hashfile.py
tests/: test_simple_project.py
tests/project_b/webcrane/: manifest.toml
wc/: __init__.py  main.py
wc/src/chunkify/: __init__.py  hashfile.py
wc/src/datastructures/: dotignore.py
webcrane/: __init__.py  client.py  main.py  server.py
webcrane/actors/: cli.py  client.py
webcrane/peers/: peer.py  repeater.py
webcrane/src/chunkify/: chunk_reader.py  hashfile.py
webcrane/src/datastructures/: dotignore.py
webcrane/src/default/: manifest.py
webcrane/src/filepath/: __init__.py  chunk_reader.py  group.py  hashfile.py  walktree.py
webcrane/src/manifest/: default.py  manifest.py
webcrane/src/merge/: __init__.py  merge.py
webcrane/src/rooms/: __init__.py  cls.py
webcrane/src/tui/: __init__.py
wsvcs/: __init__.py  client.py  main.py  server.py
wsvcs/api/: walktree.py
wsvcs/api/server/: __init__.py
wsvcs/cli/: __init__.py  cli.py
wsvcs/client/: __init__.py  cli.py  manifest.py
wsvcs/server/: __init__.py
wsvcs/shared/: abstract.py  ainput.py  chunk_reader.py  commands.py  hashfile.py  logging.py  modes.py  packages.py  surjection.py  terminal.py  walktree.py
wsvcs/shared/config/: managers.py
wsvcs/src/chunkify/: chunk_reader.py  hashfile.py
wsvcs/src/datastructures/: __init__.py  dotignore.py
wsvcs/src/filepath/: __init__.py  (+1 more)
(+11 files in other folders)
