[tool.poetry]
name = "wsvcs"
version = "0.2.0"
description = ""
authors = ["Encore Ecosystem"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
websockets = "^13.0.1"
tqdm = "^4.66.5"
tomli-w = "^1.0.0"
globmatch = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wsvcs = "wsvcs.main:main"
